# discord-chat-exporter-py

./: PLAN.md  README.md  REVIEW.md  THINKING_LOG.md  pyproject.toml
discord_chat_exporter/: __init__.py  __main__.py
discord_chat_exporter/cli/: app.py
discord_chat_exporter/core/: exceptions.py
discord_chat_exporter/core/discord/: client.py  snowflake.py
discord_chat_exporter/core/discord/models/: __init__.py  attachment.py  cdn.py  channel.py  embed.py  emoji.py  emoji_index.py  guild.py  interaction.py  member.py  message.py  reaction.py  role.py  sticker.py  user.py
discord_chat_exporter/core/exporting/: asset_downloader.py  channel_exporter.py  context.py  format.py  message_exporter.py  partitioning.py  request.py
discord_chat_exporter/core/exporting/filtering/: __init__.py  base.py  combinators.py  filters.py  parser.py
discord_chat_exporter/core/exporting/writers/: base.py  csv.py  html.py  json.py  plaintext.py
discord_chat_exporter/core/markdown/: __init__.py  html_visitor.py  nodes.py  parser.py  plaintext_visitor.py  visitor.py
discord_chat_exporter/core/utils/: http.py
discord_chat_exporter/mcp/: __main__.py  server.py
discord_chat_exporter/templates/html/: message_group.html.j2  postamble.html.j2  preamble.html.j2
tests/: conftest.py  test_client.py  test_export_integration.py  test_export_pipeline.py  test_filter_parser.py  test_filters.py  test_markdown_parser.py  test_markdown_visitors.py  test_models.py  test_partitioning.py  test_snowflake.py
