[project]
name = "discord-chat-exporter"
version = "0.1.0"
description = "A tool for exporting Discord chat logs to various formats"
readme = {text = "", content-type = "text/plain"}
requires-python = ">=3.12"
dependencies = [
    "httpx[http2]>=0.27",
    "click>=8.1",
    "rich>=13.0",
    "jinja2>=3.1",
    "pydantic>=2.5",
    "tenacity>=8.2",
]

[project.scripts]
discord-chat-exporter = "discord_chat_exporter.cli.app:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "ruff>=0.3",
    "mypy>=1.8",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
